# zkOS-monorepo

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-GPL-3.0-only-with-Classpath-exception  Makefile  NOTICE  README.md  foundry.toml  package-lock.json  package.json  rust-toolchain.toml
crates/ar-cli/: Cargo.toml  Dockerfile  README.md
crates/ar-cli/src/: cli.rs  collect_viewing_keys.rs  common.rs  db.rs  error.rs  generate.rs  index_events.rs  inspect.rs  main.rs  recoverable_error.rs  reveal.rs  revoke.rs
crates/content-encryption/: Cargo.toml  lib.rs
crates/evm-utils/: Cargo.toml
crates/evm-utils/src/: compilation.rs  evm_runner.rs  lib.rs
crates/fee-estimator/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.docker  README.md  docker-compose.yaml  run-fee-estimator.sh  start.sh
crates/fee-estimator/src/: config.rs  fees.rs  main.rs
crates/fee-estimator/src/shielder/: deposit.rs  mod.rs  new_account.rs  patched.rs  pk.rs
crates/halo2-verifier/: Acknowledgements  Cargo.toml  Makefile
crates/halo2-verifier/src/: generator-v0_1_0.rs  generator.rs
crates/halo2-verifier/src/lib/: codegen.rs  lib.rs  verifier_contract.rs
crates/halo2-verifier/src/lib/codegen/: evaluator.rs  pcs.rs  template.rs  (+1 more)
crates/halo2-verifier/templates/: Halo2Verifier.sol  Halo2VerifyingKey.sol
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs  permit2.rs  poseidon2.rs  proving_utils.rs  token.rs  verifier.rs
crates/integration-tests/src/shielder/: address_conversion.rs  ar_pubkey.rs  call_errors.rs  deploy.rs  erc1967proxy.rs  erc20.rs  fake_token.rs  ierc20.rs  limits.rs  merkle.rs  mod.rs  protocol_fees.rs
crates/macros/: Cargo.toml
crates/macros/src/: args.rs  bridging.rs  lib.rs  meta_utils.rs  registration.rs  types.rs  utils.rs
crates/memo-scan/: Cargo.toml  README.md
crates/memo-scan/src/: main.rs  scan.rs  utils.rs
crates/powers-of-tau/: Cargo.toml  lib.rs
crates/shielder-account/: Cargo.toml
crates/shielder-account/src/: call_data.rs  lib.rs  recovery.rs  secrets.rs  shielder_action.rs
crates/shielder-cli/: Cargo.toml  Makefile
crates/shielder-cli/src/: app_state.rs  config.rs  main.rs  recovery.rs  state_file.rs
crates/shielder-cli/src/shielder_ops/: deposit.rs  mod.rs  new_account.rs  pk.rs  withdraw.rs
crates/shielder-contract/: Cargo.toml
crates/shielder-contract/src/: api.rs  call_type.rs  connection.rs  erc20.rs  events.rs  lib.rs  merkle_path.rs  protocol_fee.rs  providers.rs  recovery.rs  types.rs
crates/shielder-relayer/: Cargo.toml  Makefile  README.md  example-env  run-relayer.sh  test.sh
crates/shielder-relayer/docker/: Dockerfile.client  Dockerfile.docker  Dockerfile.dockerignore
crates/shielder-relayer/src/: currency.rs  environment_variables.rs  fee.rs  health_endpoint.rs  info_endpoints.rs  lib.rs  main.rs  metrics.rs  price_feed.rs  quote.rs  quote_cache.rs  recharge.rs  server.rs  token.rs
crates/shielder-relayer/src/config/: cli.rs  defaults.rs  display.rs  enums.rs  mod.rs  tests.rs
crates/shielder-relayer/src/monitor/: balance_monitor.rs  endpoints.rs  mod.rs  rpc_monitor.rs
crates/shielder-relayer/src/price_feed/: fetching.rs  mod.rs  price.rs  tests.rs
crates/shielder-relayer/src/relay/: fee_checking_tests.rs  mod.rs  monitoring.rs  request_trace.rs  taskmaster.rs  tests.rs
crates/shielder-relayer/test-resources/: AcceptingShielder.sol  RevertingShielder.sol
crates/shielder-relayer/tests/: component_tests.rs  relay_tests.rs  status_tests.rs
crates/shielder-relayer/tests/utils/: config.rs  mod.rs  relayer_image.rs
crates/shielder-rust-sdk/: Cargo.toml
crates/shielder-rust-sdk/src/: lib.rs  permit2.rs  powers_of_tau.rs
crates/shielder-rust-sdk/src/account/: call_data.rs  mod.rs  shielder_action.rs
crates/shielder-rust-sdk/src/contract/: api.rs  call_type.rs  connection.rs  merkle_path.rs  mod.rs  providers.rs  types.rs
crates/shielder-setup/: Cargo.toml  lib.rs
crates/shielder-wasm/: .gitignore  Cargo.toml  Makefile  build.rs  update-worker-helpers.sh
crates/shielder-wasm/.cargo/: config.toml
crates/shielder-wasm/src/: lib.rs  secrets.rs  wasm.rs
crates/shielder-wasm/src/circuits/: mod.rs  new_account.rs
crates/shielder_bindings/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  package-light.template.json  package.template.json  uniffi-bindgen.rs
crates/shielder_bindings/src/: conversions.rs  hash.rs  lib.rs  note_config.rs  secrets.rs  utils.rs
crates/shielder_bindings/src/circuits/: deposit.rs  deposit_v0_1_0.rs  error.rs  mod.rs  new_account.rs  withdraw.rs
crates/stress-testing/: Cargo.toml  Makefile  README.md  local-scenario.sh  testnet-scenario.sh
crates/stress-testing/src/: actor.rs  config.rs  main.rs  party.rs  setup.rs  util.rs
crates/test-ts-conversions/: Cargo.toml
crates/test-ts-conversions/src/: main.rs
crates/token-distributor/: .gitignore  Cargo.toml  main.rs
crates/token-distributor/src/: cli.rs  main.rs
crates/type-conversions/: Cargo.toml  endianess.rs  lib.rs
tee/: .dockerignore  .env.example  Cargo.toml  Makefile  README.md  docker-compose.yml  rustfmt.toml
tee/crates/shielder-prover-common/: Cargo.toml
tee/crates/shielder-prover-common/src/: base64_serialization.rs  lib.rs  protocol.rs  vsock.rs
tee/crates/shielder-prover-server/: Cargo.toml
tee/crates/shielder-prover-server/src/: command_line_args.rs  error.rs  main.rs
tee/crates/shielder-prover-tee/: Cargo.toml  build.rs
tee/crates/shielder-prover-tee/src/: main.rs  server.rs
tee/crates/shielder-rewards-common/: Cargo.toml
tee/crates/shielder-rewards-common/src/: lib.rs  protocol.rs  vsock.rs
tee/crates/shielder-rewards-migrations/src/: m20220101_000001_create_table.rs
tee/crates/shielder-rewards-server/: Cargo.toml
tee/crates/shielder-rewards-server/src/: main.rs
tee/crates/shielder-rewards-tee/: Cargo.toml
tee/crates/shielder-rewards-tee/src/: crypto.rs  lib.rs  main.rs  rewards.rs
tee/docker/: Dockerfile  dockerentrypoint.sh
tee/nix/: enclave.nix  flake.nix
tee/tf/: main.tf  terraform.tfvars
(+453 files in other folders)
