[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Cardinal"]
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/zkOS-monorepo"

[workspace.dependencies]
alloy-contract = { version = "0.9.1" }
alloy-network = { version = "0.9.1" }
alloy-primitives = { version = "0.8.15" }
alloy-provider = { version = "0.9.1" }
alloy-rpc-types = { version = "0.9.1" }
alloy-rpc-types-eth = { version = "0.9.1" }
alloy-signer = { version = "0.9.1" }
alloy-signer-local = { version = "0.9.1" }
alloy-sol-types = { version = "0.8.15" }
alloy-transport = { version = "0.9.1" }
anyhow = { version = "1.0.86", default-features = false }
askama = { version = "0.12.0", default-features = false }
async-channel = { version = "2.3.1" }
axum = { version = "0.7.7" }
byteorder = { version = "1.4.3" }
chacha20poly1305 = { version = "0.10.1", default-features = false }
clap = { version = "4.5.8" }
getrandom = { version = "0.2" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0", default-features = false }
halo2curves = { version = "0.6.0", default-features = false }
hex = { version = "0.4.3" }
inquire = { version = "0.7.5" }
itertools = { version = "0.13.0" }
metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
num-bigint = { version = "0.4.3" }
openssl = { version = "0.10.59" }
rand = { version = "0.8.5" }
rayon = { version = "1.8" }
reqwest = { version = "0.12.5" }
revm = { version = "18.0.0", default-features = false }
revm-primitives = { version = "14.0.0", default-features = false }
rstest = "0.23.0"
ruint = { version = "1" }
rust-argon2 = { version = "2.1.0" }
serde = { version = "1.0.203" }
serde_json = { version = "1.0.120" }
sha3 = { version = "0.10" }
shellexpand = { version = "3.1.0" }
# https://github.com/Cardinal-Cryptography/zkOS-circuits/tree/cdd4115474f79520a98826a9d7f026a97066c758
shielder-circuits = { git = "ssh://git@github.com/Cardinal-Cryptography/zkOS-circuits", rev = "cdd411" }
testcontainers = { version = "0.19.0" }
thiserror = { version = "2.0.9" }
tokio = { version = "1.38.0" }
tower-http = { version = "0.6.1" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
uniffi = { version = "0.28.3" }
wasm-bindgen = { version = "0.2.92" }
wasm-bindgen-rayon = { version = "1.2.1" }

# Local dependencies
content-encryption = { path = "crates/content-encryption", default-features = false }
evm-utils = { path = "crates/evm-utils" }
halo2_solidity_verifier = { path = "crates/halo2-verifier" }
powers-of-tau = { path = "crates/powers-of-tau" }
shielder-account = { path = "crates/shielder-account" }
shielder-contract = { path = "crates/shielder-contract" }
shielder-relayer = { path = "crates/shielder-relayer" }
shielder-setup = { path = "crates/shielder-setup" }
type-conversions = { path = "crates/type-conversions" }
