[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Cardinal"]
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/zkOS-monorepo"

[workspace.dependencies]
alloy-primitives = { version = "0.8.15" }
base64 = "0.22.1"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
shielder-circuits = { git = "https://github.com/Cardinal-Cryptography/zkOS-circuits", rev = "df31437" }
shielder-rewards-common = { path = "crates/shielder-rewards-common" }
thiserror = "2.0.12"
tokio = "1.45.0"
tokio-util = "0.7.15"
tokio-vsock = "0.7.1"
