[package]
name = "ar-cli"
version = "0.1.0"
description = "CLI for interacting with the zkOS Shielder contract"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
env_logger = "0.10.0"
log = "0.4.20"