[package]
name = "evm-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
hex = { workspace = true }
revm = { workspace = true, default-features = false, features = ["std"] }
revm-primitives = { workspace = true }
thiserror = { workspace = true }
