[package]
name = "fee-estimator"
version = "0.1.0"
readme = "README.md"
description = "Fee estimator for the zkOS Shielder contract"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer-local = { workspace = true }
anyhow = { workspace = true, default-features = true }
axum = { workspace = true }
powers-of-tau = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shellexpand = { workspace = true }
shielder-account = { workspace = true, features = ["contract"] }
shielder-circuits = { workspace = true }
shielder-contract = { workspace = true }
shielder-setup = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
type-conversions = { workspace = true }
