[package]
name = "halo2_solidity_verifier"
version = "0.2.0"
edition = "2021"

[lib]
name = "halo2_solidity_verifier"
path = "src/lib/lib.rs"

[[bin]]
name = "halo2_solidity_verifier_generator"
path = "src/generator.rs"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
askama = { workspace = true, features = ["config"] }
evm-utils = { workspace = true }
halo2_proofs = { workspace = true }
itertools = { workspace = true }
ruint = { workspace = true }
shielder-circuits = { workspace = true }
shielder-rust-sdk = { workspace = true, features = ["parameter_generation", "powers_of_tau"] }
type-conversions = { workspace = true }
