[package]
name = "halo2_solidity_verifier"
version = "0.2.0"
edition = "2021"

[lib]
name = "halo2_solidity_verifier"
path = "src/lib/lib.rs"

[[bin]]
name = "halo2_solidity_verifier_generator"
path = "src/generator.rs"

[[bin]]
name = "halo2_solidity_verifier_generator_v0_1_0"
path = "src/generator-v0_1_0.rs"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
askama = { workspace = true, features = ["config"] }
evm-utils = { workspace = true }
halo2_proofs = { workspace = true }
itertools = { workspace = true }
powers-of-tau = { workspace = true }
ruint = { workspace = true }
shielder-circuits = { workspace = true }
shielder-circuits-v0_1_0 = { workspace = true }
shielder-setup = { workspace = true }
type-conversions = { workspace = true }
