[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[lib]

[[bin]]
name = "gas-consumption"
path = "src/bin/gas_consumption.rs"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true, features = ["json"] }
evm-utils = { workspace = true }
halo2_proofs = { workspace = true }
halo2_solidity_verifier = { workspace = true }
hex = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rstest = { workspace = true }
shielder-circuits = { workspace = true }
shielder-rust-sdk = { workspace = true, features = ["account", "contract", "conversion", "parameter_generation", "powers_of_tau"] }
