[package]
name = "shielder-cli"
version = "0.1.0"
description = "CLI for interacting with the zkOS Shielder contract"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true, default-features = true }
clap = { workspace = true, features = ["derive"] }
inquire = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }

content-encryption = { workspace = true, features = ["std"] }
shielder-circuits = { workspace = true }
shielder-relayer = { workspace = true }
shielder-rust-sdk = { workspace = true, features = ["account", "contract", "conversion", "powers_of_tau"] }
