[package]
name = "shielder-cli"
version = "0.1.0"
description = "CLI for interacting with the zkOS Shielder contract"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true, default-features = true }
clap = { workspace = true, features = ["derive"] }
inquire = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }

content-encryption = { workspace = true, features = ["std"] }
powers-of-tau = { workspace = true }
shielder-account = { workspace = true, features = ["contract"] }
shielder-circuits = { workspace = true }
shielder-contract = { workspace = true }
shielder-relayer = { workspace = true }
shielder-setup = { workspace = true }
type-conversions = { workspace = true }
