[package]
name = "shielder-relayer"
version = "0.1.0"
readme = "README.md"
description = "Trusted service for private withdrawals from the zkOS Shielder contract"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
anyhow = { workspace = true, default-features = true }
async-channel = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
openssl = { version = "0.10.59", features = ["vendored"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shielder-rust-sdk = { workspace = true, features = ["contract", "native_token"] }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }

[dev-dependencies]
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
testcontainers = { workspace = true }
