[package]
name = "shielder-relayer"
version = "0.1.0"
readme = "README.md"
description = "Trusted service for private withdrawals from the zkOS Shielder contract"

edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
anyhow = { workspace = true, default-features = true }
assert2 = { workspace = true }
async-channel = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
openssl = { workspace = true, features = ["vendored"] }
reqwest.workspace = true
rust_decimal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shielder-contract = { workspace = true }
shielder-setup = { workspace = true }
thiserror.workspace = true
time = { workspace = true, features = ["serde-human-readable"] }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "json",
    "env-filter",
] }

[dev-dependencies]
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
testcontainers = { workspace = true }
