[package]
name = "shielder-rust-sdk"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
description = "Rust SDK for zkOS Shielder contract"

[dependencies]
alloy-contract = { workspace = true, optional = true }
alloy-network = { workspace = true, optional = true }
alloy-primitives = { workspace = true, features = ["serde"], optional = true }
alloy-provider = { workspace = true, optional = true }
alloy-rpc-types = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
alloy-sol-types = { workspace = true, optional = true }
alloy-transport = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
halo2_proofs = { workspace = true, optional = true }
halo2curves = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
log = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
rand = { workspace = true, features = ["small_rng"], optional = true }
secp256k1 = { workspace = true, features = ["recovery"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sha3 = { workspace = true, optional = true }
shielder-circuits = { workspace = true, optional = true }
static_assertions = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
alloy-primitives = {workspace = true, features = ["rand"]}
rand = { workspace = true }

[features]
account = [
    "alloy-primitives",
    "serde",
    "sha3",
    "shielder-circuits",
    "static_assertions",
]
contract = [
    "alloy-primitives",
    "alloy-contract",
    "alloy-network",
    "alloy-provider",
    "alloy-rpc-types",
    "alloy-sol-types",
    "alloy-signer-local",
    "alloy-transport",
    "anyhow",
    "conversion",
    "log",
    "rand",
    "thiserror",
    "tracing"
]
conversion = [
    "alloy-primitives",
    "halo2curves",
    "thiserror",
]
native_token = []
parameter_generation = [
    "rand"
]
eip_155 = []
powers_of_tau = [
    "byteorder",
    "halo2_proofs",
    "halo2curves",
    "num-bigint",
    "shielder-circuits"
]