[package]
name = "shielder-setup"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
rand = { workspace = true }
serde = { workspace = true }
shielder-circuits = { workspace = true }
type-conversions = { workspace = true }
