[package]
name = "shielder-wasm"
version = "0.1.0"
description = "WASM bindings to shielder circuits for browser"

edition.workspace = true
authors = ["Cardinal", "Piotr Roslaniec <p.roslaniec@gmail.com>"]
homepage.workspace = true
license = "Apache-2.0"
categories.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
halo2_proofs = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
rayon = { workspace = true, optional = true }
sha2 = { workspace = true }
shielder-circuits = { workspace = true }
shielder-rust-sdk = { workspace = true, features = ["account"] }
type-conversions = { workspace = true }
wasm-bindgen-rayon = { workspace = true, optional = true }
wasm-bindgen.workspace = true

[build-dependencies]
powers-of-tau = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
shielder-circuits = { workspace = true }
shielder-setup = { workspace = true }

[features]
default = ["std", "merkle"]
merkle = []
std = []
multithreading = [
    "rayon",
    "wasm-bindgen-rayon",
    "shielder-circuits/multithreading",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '-g']
